data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_988.wast
;; 9. **Test: Function Call with Branched Error Handling**    - **Description**: Design a function that executes a series of instructions with error handling utilizing `br` instructions to labels. Calls to this function should trigger specific branch targets that must validate error handling procedures involving operand management.    - **Constraint Checked**: Checks robustness in error handling procedures via branching in function calls.    - **Improper Handling Aspect**: Faulty error handling paths redirecting incorrectly due to misinterpreted labels or stack states.

(assert_invalid
  (module
    (func $func-call-error-handling
      (call $target-function)
      (block $label1
        (br $error-handling) 
        (unreachable)
      )
      (block $label2
        (br $error-handling)
        (unreachable)
      )
    )
    (func $target-function
      (i32.const 1)
      (i32.const 2)
      (br 1)
      (i32.add)
    )
  )
  "type mismatch"
)